--- a/src/Verdeva.Sites.Antennae.Transcore/Verdeva.Sites.Antennae.Transcore.csproj
+++ b/src/Verdeva.Sites.Antennae.Transcore/Verdeva.Sites.Antennae.Transcore.csproj
@@ -4,4 +4,13 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="log4net" Version="2.0.8" />
+    <PackageReference Include="System.Reactive.Linq" Version="3.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Verdeva.Site.Antennae\Verdeva.Sites.Antennae.csproj" />
+  </ItemGroup>
+
 </Project>
