--- a/src/Verdeva.Site/Verdeva.Sites.csproj
+++ b/src/Verdeva.Site/Verdeva.Sites.csproj
@@ -8,13 +8,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="log4net" Version="2.0.8" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
     <PackageReference Include="System.Reactive.Linq" Version="3.1.1" />
+    <PackageReference Include="System.Threading.ThreadPool" Version="4.0.10" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Verdeva.Site.Antennae\Verdeva.Sites.Antennae.csproj" />
+    <ProjectReference Include="..\Verdeva.Sites.Antennae.Transcore\Verdeva.Sites.Antennae.Transcore.csproj" />
   </ItemGroup>
 
 </Project>
