--- a/src/Verdeva.Sites.Antennae.Transcore/Verdeva.Sites.Antennae.Transcore.csproj
+++ b/src/Verdeva.Sites.Antennae.Transcore/Verdeva.Sites.Antennae.Transcore.csproj
@@ -5,8 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="log4net" Version="2.0.8" />
+    <PackageReference Include="System.IO.Ports" Version="4.4.0" />
     <PackageReference Include="System.Reactive.Linq" Version="3.1.1" />
+    <PackageReference Include="System.Threading.ThreadPool" Version="4.0.10" />
   </ItemGroup>
 
   <ItemGroup>
